# Kanbrick-V1

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ISSUES_PUBLISHED.md  ISSUES_SUMMARY.md  ISSUE_LABELS_APPLIED.md  README.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: agent-task.yml  bug.yml  config.yml
.github/workflows/: ci.yml  cockpit.yml  k8s.yml
.out-of-scope/: README.md
cockpit/: .gitignore  README.md  index.html  package.json  vite.config.ts
cockpit/scripts/: prepare-sidecar.sh  smoke-e2e.sh
cockpit/src/: App.css  App.tsx  ErrorBoundary.tsx  Login.tsx  LoopRunner.tsx  Me.tsx  Messenger.tsx  Providers.tsx  Shell.tsx  Skeleton.tsx  SkillStudio.tsx  Spikes.tsx  Toast.tsx  Visualizer.tsx  Whiteboard.tsx  api.ts  main.tsx
cockpit/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
cockpit/src-tauri/capabilities/: default.json
cockpit/src-tauri/src/: auth.rs  components.rs  lib.rs  loops.rs  main.rs  messenger.rs  providers.rs  sidecar.rs  skills.rs
deploy/k8s/: README.md  kanbrick-api.yaml  kanbrick-executor.yaml  keda-scaledobject.example.yaml  keda-scaledobject.yaml  networkpolicy.yaml  scale-out-prerequisites.md  scale-out.md  servicemonitor-executor.yaml  servicemonitor.yaml
docs/: ARCHITECTURE.md  SECURITY.md  benchmarks.md
docs/adr/: 0001-sparrowdb-cypher-capabilities.md  0002-phase-3-wasm-runtime.md  0003-phase-4-discovery-graphify.md  0004-phase-5-wasm-guests.md  0005-public-company-roster.md  0006-code-graph-ingest.md  0007-project-scope-grants.md  0008-control-plane-executor-split.md  0009-provider-key-custody.md  0010-ironclaw-rbac-dlp.md  0011-frontend-stack.md  0012-unified-skill-model.md  0013-loop-run-engine.md  0014-single-wasm-runtime.md  0015-tenancy-topology.md  0016-cockpit-ipc-auth-contract.md  0017-byo-ai-egress.md  0019-loop-provider-steps.md  0020-loop-mcp-tool-steps.md  0021-skill-publish-trust-gate.md  0022-read-only-guest-graph-channel.md
docs/handoffs/: cockpit-program.md  phase-10-handoff.md  phase-11-deepening-handoff.md  phase-3-handoff.md  phase-4-handoff.md  post-prd-handoff.md
docs/prd/: phase-16-governed-autonomy.md
docs/probes/: p8.1-upstream-compat-matrix.md  p8.2-stronghold-spike.md  p8.3-mcp-bridge.md  p9.3-key-custody.md
graph/: README.md
guests/compliance/: Cargo.toml
guests/compliance/src/: lib.rs
guests/echo/: Cargo.toml
guests/echo/src/: lib.rs
guests/reporting/: Cargo.toml
guests/reporting/src/: lib.rs
guests/sdk-example/: Cargo.toml
guests/sdk-example/src/: lib.rs
guests/valuation/: Cargo.toml
guests/valuation/src/: lib.rs
kanbrick-api/: Cargo.toml  build.rs
kanbrick-api/src/: admission.rs  caps.rs  components.rs  executor.rs  grants.rs  http_client.rs  internal.rs  lib.rs  loops.rs  main.rs  messenger.rs  metrics.rs  org_graph.rs  provider_keys.rs  provider_runtime.rs  skills.rs  tool_runtime.rs
kanbrick-api/tests/: components.rs  e2e.rs  executor.rs  grants.rs  http.rs  internal.rs  loops.rs  messenger.rs  metrics.rs  provider_keys.rs  registry.rs  security.rs  skills.rs
kanbrick-auth/: Cargo.toml
kanbrick-auth/src/: apikey.rs  audit.rs  clearance.rs  guarded.rs  jwt.rs  lib.rs  login.rs  password.rs  readonly.rs  scope.rs
kanbrick-cli/: Cargo.toml
kanbrick-cli/src/: main.rs
kanbrick-cli/tests/: seed_cli.rs
kanbrick-core/: Cargo.toml
kanbrick-core/src/: abi.rs  clearance.rs  context.rs  error.rs  ids.rs  lib.rs  schema.rs  status.rs
kanbrick-discovery/: Cargo.toml
kanbrick-discovery/src/: cache.rs  codegraph.rs  grants.rs  graph.rs  influence.rs  lib.rs  model.rs  org.rs  portfolio.rs  scope.rs
kanbrick-egress/: Cargo.toml
kanbrick-egress/src/: lib.rs
kanbrick-guest-sdk/: Cargo.toml
kanbrick-guest-sdk/src/: lib.rs
kanbrick-loops/: Cargo.toml
kanbrick-loops/src/: lib.rs
kanbrick-mesh/: Cargo.toml  build.rs
kanbrick-mesh/src/: assets.rs  error.rs  event.rs  host.rs  lib.rs  runtime.rs  scheduler.rs  services.rs
kanbrick-mesh/tests/: compliance_guest.rs  cross_guest_events.rs  data_integrity.rs  echo_guest.rs  event_bus.rs  guest_query.rs  hot_reload.rs  perf.rs  reporting_guest.rs  resource_limits.rs  sdk_example_guest.rs  valuation_guest.rs
kanbrick-providers/: Cargo.toml
kanbrick-providers/src/: anthropic.rs  custody.rs  lib.rs  openai.rs  test_support.rs  wire.rs
kanbrick-store/: Cargo.toml
kanbrick-store/src/: guest_policy.rs  lib.rs  loop_registry.rs  messenger_log.rs  migrations.rs  registry_meta.rs  schema.rs  seed.rs  skill_registry.rs  store.rs  value.rs
kanbrick-store/tests/: lifecycle.rs  migrations.rs  org_chart.rs  query_typed.rs  schema_constraints.rs  seed_loader.rs
kanbrick-tokens/: Cargo.toml
kanbrick-tokens/src/: budget.rs  ledger.rs  lib.rs  pricing.rs
probes/: .gitignore
probes/approval-queue/: Cargo.toml  README.md
probes/approval-queue/src/: lib.rs
probes/rbac-overlay/: Cargo.toml  README.md
probes/rbac-overlay/src/: lib.rs
schema/: README.md
scripts/: build-guests.sh  build-static.sh  build.sh  docker-release.sh  smoke.sh  validate-k8s.sh
seed/: kanbrick_financials.cypher  kanbrick_seed_data.cypher
tests/e2e/: README.md
