[package]
name = "kanbrick-cli"
description = "CLI tooling for Kanbrick-V1 (seed loader, admin)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kanbrick-cli"
path = "src/main.rs"

[dependencies]
kanbrick-core.workspace = true
kanbrick-store.workspace = true
kanbrick-auth.workspace = true
clap.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
