[package]
name = "kanbrick-core"
description = "Shared types, errors, and the FirmContext security identity for Kanbrick-V1."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
serde_json.workspace = true
