[package]
name = "kanbrick-discovery"
description = "graphify-rs graph analysis over the firm graph."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kanbrick-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
