[package]
name = "kanbrick-guest-sdk"
description = "Typed bindings to the Kanbrick host ABI for WASM guest modules (#39)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# The SDK reuses the shared ABI/types so host and guest never diverge (#39).
kanbrick-core.workspace = true
serde.workspace = true
serde_json.workspace = true
