[package]
name = "kanbrick-mesh"
description = "WASM orchestration runtime (wasmtime 45) and guest dispatch."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kanbrick-core.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
