[package]
name = "kanbrick-providers"
description = "Host-side BYO-AI abstraction: one ChatProvider trait over cloud LLM providers + normalized token Usage (L5 Cockpit, Phase 9)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Trait + normalized types (P9.1) and wire codecs (P9.2). The crate deliberately
# pulls no HTTP/async stack: the wire adapters move bytes through an injected
# transport seam, so the trait stays runtime-agnostic and object-safe.
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
# Provider-key custody (P9.3) namespaces secrets by the JWT-derived user_id; the
# id types are UUIDs. Already in the workspace lock — no new download.
uuid.workspace = true
