[package]
name = "kanbrick-store"
description = "Embedded SparrowDB lifecycle wrapper and schema migrations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kanbrick-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
