# Kanbrick L5 "Cockpit" — Tauri v2 host shell (P7.1, issue #87).
#
# This crate is its OWN build graph. It is listed in the repo-root `Cargo.toml`
# `exclude` set (the same discipline ADR-0002 applies to the vendored upstreams
# and the wasm-only guests), and it carries an empty `[workspace]` table below so
# `cargo`/`tauri` inside `cockpit/src-tauri/` always resolve standalone — never
# pulling Tauri's heavy dep tree into the firm-OS workspace, and never letting an
# accidental `--workspace` build reach it. It therefore does NOT inherit the
# workspace's `*.workspace = true` keys.
[workspace]

[package]
name = "kanbrick-cockpit"
version = "0.1.0"
description = "Kanbrick L5 Cockpit — agentic desktop shell on the Firm OS spine"
authors = ["Kanbrick-V1 contributors"]
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tnsr-Q/Kanbrick-V1"

[lib]
# The desktop entry point lives in the lib so the same `run()` can back a future
# mobile target; `main.rs` is a thin shim. Matches the Tauri v2 template layout.
name = "kanbrick_cockpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Talks to the localhost sidecar only (plain HTTP) — no TLS backend pulled in.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# BYO-AI provider abstraction + key custody (P9.1–9.3). A firm-OS workspace member,
# depended on by path; it pulls only serde/serde_json/thiserror/uuid — no HTTP or
# async stack — so it stays light inside the cockpit's separate build graph.
kanbrick-providers = { path = "../../kanbrick-providers" }
uuid = { version = "1", features = ["v4"] }
# Constraint-only pin (not used directly): keep the transitive `time` off 0.3.52
# (published 2026-06-30), which added a second arg to `Parsable::parse` and so breaks
# the transitive `cookie 0.18.1` (Tauri's webview cookie store) — `error[E0061]` in a
# fresh resolve. 0.3.51 is the last good release. This crate is a standalone build
# graph with no committed Cargo.lock, so CI re-resolves to latest each run; drop this
# once `cookie` ships a compatible release or a lockfile is committed here.
time = ">=0.3, <0.3.52"

[features]
# Used by `tauri build` for production bundles; DO NOT REMOVE.
custom-protocol = ["tauri/custom-protocol"]
