[package]
name = "kanbrick-guest-valuation"
description = "WASM guest — DCF + revenue-multiple valuation for portfolio companies."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# cdylib → the wasm32-wasip1 guest; rlib → native unit tests of the pure logic.
crate-type = ["cdylib", "rlib"]

[dependencies]
kanbrick-core.workspace = true
kanbrick-guest-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
